--- a/build.gradle
+++ b/build.gradle
@@ -13,13 +13,14 @@ plugins {
 
 repositories {
     // Use JCenter for resolving dependencies.
-    jcenter()
+    maven {
+        url "https://repo1.maven.org/maven2/"
+    }
 }
 
 dependencies {
     // Use JUnit test framework.
     testImplementation 'junit:junit:4.13'
-
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
 }
